--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ editdistance==0.6.2
 einops==0.6.0
 exceptiongroup==1.1.0
 executing==1.2.0
+fairseq==0.12.2
 faiss-cpu==1.7.3
 fastapi==0.89.1
 fasttext==0.9.2
@@ -151,7 +152,7 @@ pooch==1.6.0
 portalocker==2.7.0
 progress==1.6
 prompt-toolkit==3.0.36
-protobuf==3.20.3
+protobuf==3.20.1
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -187,6 +188,7 @@ regex==2022.10.31
 requests==2.28.2
 requests-oauthlib==1.3.1
 resampy==0.4.2
+ResponsiveVoice==0.5.3
 rfc3986==1.5.0
 rich==12.6.0
 rsa==4.9
@@ -225,7 +227,7 @@ tabulate==0.9.0
 tensorboard==2.11.2
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorboardX==2.5
+tensorboardX==2.5.1
 termcolor==2.2.0
 text-unidecode==1.3
 textdistance==4.5.0
